--- a/index.css
+++ b/index.css
@@ -27,7 +27,7 @@ body {
     z-index: 10;
     height: 318px;
     padding-top: 0px;
-    background-color: black;
+    background-color: white;
     border-radius: 10px;
 }
 
@@ -36,7 +36,7 @@ body {
     display: block;
     padding: 20px;
     border-radius: 0px;
-    background-color: black;
+    background-color: white;
     border-radius: 10px;
     font-size: 20px;
 }
