--- a/index.css
+++ b/index.css
@@ -32,7 +32,7 @@ body {
 }
 
 .first-paralex .for-icons a {
-    color: white;
+    color: black;
     display: block;
     padding: 20px;
     border-radius: 0px;
