--- a/index.css
+++ b/index.css
@@ -27,16 +27,16 @@ body {
     z-index: 10;
     height: 318px;
     padding-top: 0px;
-    background-color: white;
+    background-color: #fff;
     border-radius: 10px;
 }
 
 .first-paralex .for-icons a {
-    color: black;
+    color: #000;
     display: block;
     padding: 20px;
     border-radius: 0px;
-    background-color: white;
+    background-color: #fff;
     border-radius: 10px;
     font-size: 20px;
 }
