--- a/index.css
+++ b/index.css
@@ -384,7 +384,7 @@ body {
     border: 0;
     border-bottom: 2px solid white;
     font-size: 14px;
-    border-radius: 0;
+/*     border-radius: 0; */
     color: white;
     transition: all .8s;
 }
