--- a/index.css
+++ b/index.css
@@ -520,7 +520,7 @@ body {
     }
       
       // MOBILE CONTACT STYLE
-      .div-for-footer {
+      .div-for-footer p {
           text-align: center;
       }
 
