--- a/index.css
+++ b/index.css
@@ -337,7 +337,7 @@ body {
 
 .fourth-paralex {
     width: 100%;
-    height: 100vh;
+    height: 1000px;
     background-image: url("head.png");
     background-attachment: fixed;
     background-repeat: no-repeat;
@@ -347,12 +347,19 @@ body {
 }
 
 .fourth-paralex .map {
-    margin: 30px 0;
+   height: 380px;
+   width: 100%;
+   position: absolute;
+   top: 90%;
+}
+iframe {
+   height: 100%;
+   width: 100%;
 }
 
 .fourth-paralex .form-bg {
     width: 80%;
-    height: 80%;
+    height: 70%;
     background-color: rgba(0, 0, 0, 0.637);
     border-radius: 20px;
     position: absolute;
