--- a/index.css
+++ b/index.css
@@ -347,23 +347,20 @@ body {
 }
 
 .fourth-paralex .map {
-   height: 380px;
+   margin: 30px 0;
    width: 100%;
+   height: 300px;
    position: absolute;
-   top: 90%;
-}
-iframe {
-   height: 100%;
-   width: 100%;
+   top: 56%;
 }
 
 .fourth-paralex .form-bg {
     width: 80%;
-    height: 70%;
+    height: 50%;
     background-color: rgba(0, 0, 0, 0.637);
     border-radius: 20px;
     position: absolute;
-    top: 50%;
+    top: 31%;
     left: 50%;
     transform: translate(-50%, -50%);
 }
