--- a/index.css
+++ b/index.css
@@ -337,7 +337,7 @@ body {
 
 .fourth-paralex {
     width: 100%;
-    height: 1000px;
+    height: 1130px;
     background-image: url("head.png");
     background-attachment: fixed;
     background-repeat: no-repeat;
@@ -347,20 +347,21 @@ body {
 }
 
 .fourth-paralex .map {
-   margin: 30px 0;
+   margin-top: 30px;
    width: 100%;
    height: 300px;
    position: absolute;
-   top: 61%;
+   top: 56%;
+   padding-bottom: 20px;
 }
 
 .fourth-paralex .form-bg {
     width: 80%;
-    height: 65%;
+    height: 50%;
     background-color: rgba(0, 0, 0, 0.637);
     border-radius: 20px;
     position: absolute;
-    top: 31%;
+    top: 37%;
     left: 50%;
     transform: translate(-50%, -50%);
 }
